--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/kamrank89/Todo-app-myself-#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "mongodb": "^4.9.1",
     "nodemon": "^2.0.19"
   }
 }
