--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/kamrank89/Todo-app-myself-#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongodb": "^4.9.1",
     "mongoose": "^6.5.4",
